vlib/v/parser/tests/embed_file_as_nested_branch_result_with_nested_parenthesized_postfix_call.vv
fn kind() int {
	return 0
}

fn main() {
	mut sink := 0
	ok := sink == 0
	fallback := $embed_file(@FILE)
	((if ok {
		$embed_file(@FILE)
	} else {
		fallback
	}).to_string())

	((match kind() {
		0 {
			$embed_file(@FILE)
		}
		else {
			fallback
		}
	}).to_string())
	sink = missing_symbol
}
